<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">轻会议</string>
	<string name="action_more">更多</string>
	<string name="action_signup">会议签到</string>
	<string name="action_addmeet">增加会议</string>
	<string name="action_sweep">扫一扫</string>
	<string name="action_user">个人设置</string>
	<string name="action_changePsw">修改密码</string>
	<string name="action_logoff">注销账号</string>
	<string name="action_logout">退出</string>
	<string name="action_refresh_user">修改资料</string>
	<string name="action_user_qrcode">我的二维码</string>
	<string name="drawer_open">Open navigation drawer</string>
	 <string name="drawer_close">Close navigation drawer</string>
	 
	 <!-- 会议资料 -->
	 <string name="action_create_code">会议二维码</string>
	 <string name="action_quit">退出会议</string>
	 
	 <!-- 讨论 -->
	 <string name="action_create_discuss">创建讨论</string>
	 <string name="action_update_discuss">更新讨论</string>
	 
	 
	 <!-- 投票 -->
	  <string name="action_create_vote">创建投票</string>
	 
	 <!-- 调查 -->
	 
	 <!-- 人脉 -->
	  <string name="action_add_relation">扫一扫添加</string>
	 
	 
</resources>
