<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/action_research"
        android:icon="@drawable/ic_header_more"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_more"
        >
        <menu>
            <item android:id="@+id/action_refreshdata"
                android:showAsAction="always|withText"
                android:title="@string/action_refresh_user"
                />
            <item android:id="@+id/action_changePsw"
                android:showAsAction="always|withText" 
                android:title="@string/action_changePsw"
                />
            <item android:id="@+id/action_logoff"
      			  android:showAsAction="always|withText" 
      			  android:title="@string/action_logoff"
                />
            <item android:id="@+id/action_logout"
                android:showAsAction="always|withText"
                android:title="@string/action_logout" 
                />
            
        </menu>
    </item>

</menu>
